[gd_scene load_steps=12 format=2]

[ext_resource path="res://Bullets/Scripts/Bullet.gd" type="Script" id=1]
[ext_resource path="res://Bullets/Graphics/RedBase.png" type="Texture" id=2]
[ext_resource path="res://Bullets/Graphics/BlackBorder.png" type="Texture" id=3]
[ext_resource path="res://Bullets/Graphics/GrayBorder.png" type="Texture" id=4]
[ext_resource path="res://Bullets/Graphics/WhiffCloud.png" type="Texture" id=5]
[ext_resource path="res://Bullets/Graphics/GreenCheckmark.png" type="Texture" id=6]

[sub_resource type="Animation" id=1]
resource_name = "Hug"
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.25, 0.25 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.95, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 0.0627451, 0.745098, 0.152941, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=2]
resource_name = "HuffPuff"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="GDScript" id=3]
script/source = "extends Area2D

signal left_click
signal right_click

func _input_event(viewport, event, shape_idx):
	if not event is InputEventMouseButton:
		return
	if not event.pressed:
		return
	if event.button_index == BUTTON_LEFT:
		emit_signal(\"left_click\")
	elif event.button_index == BUTTON_RIGHT:
		emit_signal(\"right_click\")
	else:
		return
		
	#area enter and exit exist in Area2D"

[sub_resource type="CircleShape2D" id=4]
radius = 40.0

[sub_resource type="Animation" id=5]
resource_name = "Splash"
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Bullet" type="Node2D"]
position = Vector2( 140, 80 )
script = ExtResource( 1 )

[node name="Base" type="Sprite" parent="."]
position = Vector2( 2.28882e-005, -2.28882e-005 )
scale = Vector2( 0.233333, 0.233333 )
texture = ExtResource( 2 )

[node name="BlackBorder" type="Sprite" parent="."]
position = Vector2( 0, -4.76837e-006 )
scale = Vector2( 0.228571, 0.228571 )
texture = ExtResource( 3 )

[node name="HugCircle" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.33425, 0.33425 )
texture = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="HugCircle"]
anims/Hug = SubResource( 1 )

[node name="WhiffCloud" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
scale = Vector2( 0.228571, 0.228571 )
texture = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="WhiffCloud"]
anims/HuffPuff = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
script = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 4 )

[node name="Success" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 2.49998, 4.99996 )
scale = Vector2( 0.216667, 0.233333 )
texture = ExtResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Success"]
anims/Splash = SubResource( 5 )
[connection signal="left_click" from="Area2D" to="." method="_on_Area2D_left_click"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="right_click" from="Area2D" to="." method="_on_Area2D_right_click"]
